:wrench: configs(all): setup and config source

--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -7,11 +7,13 @@ import Header from '@/components/Header.astro';
 import { SITE_DESCRIPTION, SITE_TITLE } from '@/consts';
 import BaseHead from '@/components/base-head.astro';
 
-const posts = (await getCollection('blog')).sort((a, b) => b.data.pubDate.valueOf() - a.data.pubDate.valueOf());
+const posts = (await getCollection('blog')).sort(
+	(a, b) => b.data.pubDate.valueOf() - a.data.pubDate.valueOf(),
+);
 ---
 
 <!doctype html>
-<html lang="en">
+<html lang='en'>
 	<head>
 		<BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
 		<style>
@@ -93,9 +95,16 @@ const posts = (await getCollection('blog')).sort((a, b) => b.data.pubDate.valueO
 						posts.map((post) => (
 							<li>
 								<a href={`/blog/${post.id}/`}>
-									{post.data.heroImage && <Image width={720} height={360} src={post.data.heroImage} alt="" />}
-									<h4 class="title">{post.data.title}</h4>
-									<p class="date">
+									{post.data.heroImage && (
+										<Image
+											width={720}
+											height={360}
+											src={post.data.heroImage}
+											alt=''
+										/>
+									)}
+									<h4 class='title'>{post.data.title}</h4>
+									<p class='date'>
 										<FormattedDate date={post.data.pubDate} />
 									</p>
 								</a>
