--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -6,6 +6,7 @@ import FormattedDate from '@/components/FormattedDate.astro';
 import Header from '@/components/Header.astro';
 import { SITE_DESCRIPTION, SITE_TITLE } from '@/consts';
 import BaseHead from '@/components/base-head.astro';
+import { ResourceList } from '@/components/resoure/resource-list';
 
 const posts = (await getCollection('blog')).sort(
 	(a, b) => b.data.pubDate.valueOf() - a.data.pubDate.valueOf(),
@@ -90,6 +91,7 @@ const posts = (await getCollection('blog')).sort(
 		<Header />
 		<main>
 			<section>
+				<ResourceList />
 				<ul>
 					{
 						posts.map((post) => (
