--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -15,6 +15,21 @@
 	--clamp-2xl-lh: 1.2;
 }
 
+@font-face {
+	font-family: "Atkinson";
+	src: url("/fonts/atkinson-regular.woff") format("woff");
+	font-weight: 400;
+	font-style: normal;
+	font-display: swap;
+}
+@font-face {
+	font-family: "Atkinson";
+	src: url("/fonts/atkinson-bold.woff") format("woff");
+	font-weight: 700;
+	font-style: normal;
+	font-display: swap;
+}
+
 html {
 	font-size: 16px;
 	scroll-behavior: smooth;
@@ -22,4 +37,8 @@ html {
 	-moz-osx-font-smoothing: grayscale;
 	font-synthesis: none;
 	text-rendering: optimizelegibility;
+}
+
+body {
+	font-family: "Atkinson", sans-serif;
 }
