--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,11 @@
 ---
 import BaseHead from '@/components/base-head.astro';
-import Header from '@/components/Header.astro';
 import Button from '@/components/button.astro';
-import Footer from '@/components/Footer.astro';
-import { SITE_DESCRIPTION, SITE_TITLE } from '@/consts';
 import { Counter } from '@/components/counter';
+import Footer from '@/components/Footer.astro';
 import { Greeter } from '@/components/greeter';
+import Header from '@/components/Header.astro';
+import { SITE_DESCRIPTION, SITE_TITLE } from '@/consts';
 ---
 
 <!doctype html>
@@ -223,7 +223,7 @@ import { Greeter } from '@/components/greeter';
 
 				<p class='body'>
 					Body text - Uses gray-700 in light mode, gray-300 in dark mode.
-					Regular paragraph with <a href='#'>styled link</a> - gray-900/white
+					Regular paragraph with <a href='/'>styled link</a> - gray-900/white
 				</p>
 
 				<p>
