--- a/src/components/base-head.astro
+++ b/src/components/base-head.astro
@@ -1,5 +1,6 @@
 ---
 import type { ImageMetadata } from 'astro';
+
 import FallbackImage from '../assets/blog-placeholder-1.jpg';
 import { SITE_TITLE } from '../consts';
 // Import the global.css file here so that it is included on
@@ -31,8 +32,20 @@ const { title, description, image = FallbackImage } = Astro.props;
 <meta name='generator' content={Astro.generator} />
 
 <!-- Font preloads -->
-<!-- <link rel="preload" href="/fonts/atkinson-regular.woff" as="font" type="font/woff" crossorigin />
-<link rel="preload" href="/fonts/atkinson-bold.woff" as="font" type="font/woff" crossorigin /> -->
+<link
+	rel='preload'
+	href='/fonts/atkinson-regular.woff'
+	as='font'
+	type='font/woff'
+	crossorigin
+/>
+<link
+	rel='preload'
+	href='/fonts/atkinson-bold.woff'
+	as='font'
+	type='font/woff'
+	crossorigin
+/>
 
 <!-- Canonical URL -->
 <link rel='canonical' href={canonicalURL} />
