--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -1,7 +1,8 @@
 ---
+import BlogPost from '@/layouts/post-layout.astro';
+
 import type { CollectionEntry } from 'astro:content';
 import { getCollection, render } from 'astro:content';
-import BlogPost from '@/layouts/BlogPost.astro';
 
 export async function getStaticPaths() {
 	const posts = await getCollection('blog');
