--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -1,15 +1,16 @@
 ---
-import { Image } from 'astro:assets';
-import { getCollection } from 'astro:content';
+import BaseHead from '@/components/base-head.astro';
 import Footer from '@/components/Footer.astro';
 import FormattedDate from '@/components/FormattedDate.astro';
 import Header from '@/components/Header.astro';
-import { SITE_DESCRIPTION, SITE_TITLE } from '@/consts';
-import BaseHead from '@/components/base-head.astro';
 import { ResourceList } from '@/components/resoure/resource-list';
+import { SITE_DESCRIPTION, SITE_TITLE } from '@/consts';
+
+import { Image } from 'astro:assets';
+import { getCollection } from 'astro:content';
 
 const posts = (await getCollection('blog')).sort(
-	(a, b) => b.data.pubDate.valueOf() - a.data.pubDate.valueOf(),
+	(a, b) => b.data.publishedDate.valueOf() - a.data.publishedDate.valueOf(),
 );
 ---
 
@@ -97,17 +98,17 @@ const posts = (await getCollection('blog')).sort(
 						posts.map((post) => (
 							<li>
 								<a href={`/blog/${post.id}/`}>
-									{post.data.heroImage && (
+									{post.data.image && (
 										<Image
 											width={720}
 											height={360}
-											src={post.data.heroImage}
+											src={post.data.image}
 											alt=''
 										/>
 									)}
 									<h4 class='title'>{post.data.title}</h4>
 									<p class='date'>
-										<FormattedDate date={post.data.pubDate} />
+										<FormattedDate date={post.data.publishedDate} />
 									</p>
 								</a>
 							</li>
