--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -42,3 +42,18 @@ html {
 body {
 	font-family: "Atkinson", sans-serif;
 }
+
+/* 🌈 Glass Shine Animation */
+/* @keyframes shiny-glass {
+	0% {
+		left: -100%;
+	}
+
+	50% {
+		left: 120%;
+	}
+
+	100% {
+		left: 120%;
+	}
+} */
